ctx-demo/02-code/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: code-server-svc
spec:
  selector:
    app: code-server
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
